[tool.poetry]
name = "notion-tools"
version = "0.1.0"
description = "Python and pandas helpers for Notion"
authors = ["Patch Biosciences, Inc. <contact@patch.bio>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">= 3.8"
notion-client = ">= 0.4"
pandas = ">= 1"

[tool.poetry.dev-dependencies]
pytest = ">= 6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
